@@ -1,3 +1,8 @@
+2008-02-28  Dan Williams  <dcbw@redhat.com>
+
+	* src/wso-leap.c
+		- (widget_create_func): fix up show password stuff
+
 2008-02-22  Tambet Ingo  <tambet@gmail.com>
 
 	Implement prepopulating of the passphrase dialog with the last known good
